Login ViewComponent, ViewModel implemented

--- a/ProjectApp/src/ProjectApp/Views/_ViewImports.cshtml
+++ b/ProjectApp/src/ProjectApp/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using ProjectApp
+@using ProjectApp.ViewModels
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
