started setting up Entity Framework Core

--- a/ProjectApp/src/ProjectApp/Views/Shared/Components/Login/Default.cshtml
+++ b/ProjectApp/src/ProjectApp/Views/Shared/Components/Login/Default.cshtml
@@ -11,7 +11,7 @@
                 <div class="ui left icon input">
                     <i class="user icon"></i>
                     <input asp-for="Username" placeholder="Username" />
-                    <div asp-validation-for="Username"></div>
+                    <span asp-validation-for="Username" style="color:red;"></span>
                 </div>
             </div>
 
@@ -19,7 +19,7 @@
                 <div class="ui left icon input">
                     <i class="lock icon"></i>
                     <input asp-for="Password" placeholder="Password" />
-                    <div asp-validation-for="Password"></div>
+                    <span asp-validation-for="Password" style="color: red;"></span>
                 </div>
             </div>
 
@@ -30,7 +30,7 @@
                 </button>
             </div>
 
-            <div asp-validation-summary="All" class="ui error message"></div>
+            <div asp-validation-summary="All" class="ui error" style="color: red;"></div>
         </div>
     </form>
 </div>
