created the register, forgot and reset password ViewModels and Views

--- a/ProjectApp/src/ProjectApp/Views/Shared/Components/Login/Default.cshtml
+++ b/ProjectApp/src/ProjectApp/Views/Shared/Components/Login/Default.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="ui raised very padded text container" style="margin-right: 5%;">
     <h3 class="ui header centered">Log In</h3>
-    <form asp-controller="Main"asp-action="Authenticate" method="post" class="ui large form validate-me" role="form">
+    <form asp-controller="Main"asp-action="Index" method="post" class="ui large form validate-me" role="form">
         <div class="ui stack segment">
 
             <div class="field">
