--- a/ProjectApp/src/ProjectApp/Views/Main/ResetPassword.cshtml
+++ b/ProjectApp/src/ProjectApp/Views/Main/ResetPassword.cshtml
@@ -6,6 +6,8 @@
 <div class="ui raised very padded text container">
     <h2 class="ui header centered">Reset Password</h2>
     <form asp-controller="Main" asp-action="ResetPassword" class="ui large form validate-me" method="post">
+
+        <input asp-for="Code" type="hidden" value="@Context.Request.Query["code"]" />
         <div class="ui stacked segment">
             <div class="field">
                 <div class="ui left icon input">
